--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "ag-grid-enterprise": "^28.0.2",
     "ag-grid-react": "^28.0.0",
     "axios": "^0.27.2",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-csv": "^2.2.2",
     "react-datepicker": "^4.8.0",
