--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "ag-grid-react": "^28.0.0",
     "clipboardy": "^3.0.0",
+    "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.17.3",
     "express-session": "^1.17.3",
